have to test on github guh

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<iframe id="goalpage" title="Goal Page" width="75%" height="75%" src="https://randomincategory.toolforge.org/?category=Wikipedia%20level-4%20vital%20articles&cmnamespace=&cmtype=&returntype=subject"></iframe>
+<!DOCTYPE html>
+<html>
+    <head>
+        <script src="index.js"></script>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body class="center">
+        <button class="bottom" onclick="submit()">Submit</button>
+        <iframe id="goalpage" title="Goal Page" width="75%" src="https://randomincategory.toolforge.org/?category=Wikipedia%20level-4%20vital%20articles&cmnamespace=&cmtype=&returntype=subject"></iframe>
+    </body>
+</html>
